--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "vite": "^4.3.7"
+    "vite": "^4.3.7",
+    "vite-plugin-gh-pages": "^0.4.1"
   }
 }
